prusti-tests/tests/verify/fail/unsupported/const_expr_float.rs
fn main() {
    let _ = [1.0]; //~ ERROR unsupported constant type Float(F64)
}